--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -90,6 +90,7 @@
             android:text="Перейти к оформлению заказа"
             android:textAllCaps="false"
             android:textSize="17sp"
+            android:layout_marginTop="180dp"
             app:backgroundTint="@color/accent"
             app:cornerRadius="10dp" />
     </LinearLayout>
