--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:ellipsize="2"
+                android:ellipsize="end"
                 android:maxLines="2"
                 android:text="Клинический анализ крови с лейкоцитарной формулировкой"
                 android:textColor="@color/black"
