--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -9,7 +9,15 @@
         android:id="@+id/analyzesFragment"
         android:name="com.example.smartlab.view.fragments.AnalyzesFragment"
         android:label="AnalyzesFragment"
-        tools:layout="@layout/fragment_analyzes" />
+        tools:layout="@layout/fragment_analyzes">
+        <action
+            android:id="@+id/action_analyzesFragment_to_cartFragment"
+            app:destination="@id/cartFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
     <fragment
         android:id="@+id/resultsFragment"
         android:name="com.example.smartlab.view.fragments.ResultsFragment"
@@ -25,5 +33,10 @@
         android:name="com.example.smartlab.view.fragments.ProfileFragment"
         android:label="ProfileFragment"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="com.example.smartlab.view.fragments.CartFragment"
+        android:label="CartFragment"
+        tools:layout="@layout/fragment_cart" />
 
 </navigation>
