--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
             android:layout_marginTop="30dp"
+            android:overScrollMode="never"
             tools:itemCount="2"
             tools:listitem="@layout/item_cart" />
 
@@ -84,13 +85,13 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="180dp"
             android:layout_marginBottom="32dp"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="Перейти к оформлению заказа"
             android:textAllCaps="false"
             android:textSize="17sp"
-            android:layout_marginTop="180dp"
             app:backgroundTint="@color/accent"
             app:cornerRadius="10dp" />
     </LinearLayout>
