--- a/app/src/main/res/layout/fragment_analyzes.xml
+++ b/app/src/main/res/layout/fragment_analyzes.xml
@@ -138,6 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="100dp"
                         android:nestedScrollingEnabled="false"
                         tools:listitem="@layout/item_catalog" />
                 </LinearLayout>
