--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -37,6 +37,19 @@
         android:id="@+id/cartFragment"
         android:name="com.example.smartlab.view.fragments.CartFragment"
         android:label="CartFragment"
-        tools:layout="@layout/fragment_cart" />
+        tools:layout="@layout/fragment_cart">
+        <action
+            android:id="@+id/action_cartFragment_to_orderFragment"
+            app:destination="@id/orderFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.smartlab.view.fragments.OrderFragment"
+        android:label="OrderFragment"
+        tools:layout="@layout/fragment_order" />
 
 </navigation>
