--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
+        <item name="editTextStyle">@style/SmartLabEditText</item>
     </style>
 
     <style name="DefaultChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
@@ -34,5 +35,15 @@
     <style name="AppModalStyle" parent="Widget.MaterialComponents.BottomSheet.Modal">
         <item name="android:background">@android:color/transparent</item>
         <item name="backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="SmartLabEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">@drawable/default_edit_text_selector</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">15sp</item>
     </style>
 </resources>
