--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -56,12 +56,15 @@
             android:textColor="#7E7E9A"
             android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/etDateTime"
+        <TextView
+            android:id="@+id/tvDateTime"
+            style="@style/SmartLabEditText"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="4dp"
+            android:clickable="true"
+            android:focusable="false"
             android:hint="Выберите дату и время"
             android:textSize="15sp" />
 
@@ -93,6 +96,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="4dp"
             android:drawablePadding="12dp"
+            android:focusable="false"
             android:text="Тицкий Эдуард"
             android:textSize="15sp"
             app:drawableEndCompat="@drawable/drop_down_arrow"
