--- a/app/src/main/res/layout/bottom_sheet_address.xml
+++ b/app/src/main/res/layout/bottom_sheet_address.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/shape_bottom_sheet"
     android:orientation="vertical"
     android:paddingHorizontal="20dp"
     android:paddingTop="24dp"
@@ -240,8 +241,9 @@
             android:id="@+id/switchSaveAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:thumbTint="@color/white"
-            app:trackTint="@color/accent" />
+            android:checked="true"
+            app:trackTint="@color/switch_track_selector"
+            app:thumbTint="@color/white" />
     </LinearLayout>
 
     <EditText
@@ -264,5 +266,4 @@
         android:textStyle="bold"
         app:backgroundTint="@color/accent"
         app:cornerRadius="10dp" />
-
 </LinearLayout>
