--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -37,13 +37,15 @@
             android:textColor="#7E7E9A"
             android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/etAddress"
+        <TextView
+            android:id="@+id/tvAddress"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="4dp"
             android:hint="Введите ваш адрес"
+            style="@style/SmartLabEditText"
+            android:focusable="false"
             android:textColorHint="@color/black"
             android:textSize="15sp" />
 
