--- a/app/src/main/res/layout/bottom_sheet_address.xml
+++ b/app/src/main/res/layout/bottom_sheet_address.xml
@@ -241,9 +241,9 @@
             android:id="@+id/switchSaveAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            app:trackTint="@color/switch_track_selector"
-            app:thumbTint="@color/white" />
+            android:checked="false"
+            app:thumbTint="@color/white"
+            app:trackTint="@color/switch_track_selector" />
     </LinearLayout>
 
     <EditText
