--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -50,6 +50,19 @@
         android:id="@+id/orderFragment"
         android:name="com.example.smartlab.view.fragments.OrderFragment"
         android:label="OrderFragment"
-        tools:layout="@layout/fragment_order" />
+        tools:layout="@layout/fragment_order">
+        <action
+            android:id="@+id/action_orderFragment_to_waitingFragment"
+            app:destination="@id/waitingFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/waitingFragment"
+        android:name="com.example.smartlab.view.fragments.WaitingFragment"
+        android:label="WaitingFragment"
+        tools:layout="@layout/fragment_waiting" />
 
 </navigation>
