--- a/app/src/main/res/layout/fragment_waiting.xml
+++ b/app/src/main/res/layout/fragment_waiting.xml
@@ -78,7 +78,8 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="top|center_horizontal"
-            android:text="Вам осталось дождаться приезда медсестры и сдать анализы. До скорой встречи!"
+            android:id="@+id/tvRules"
+            android:text="@string/lastScreenText"
             android:textColor="#939396"
             android:textSize="14sp" />
 
